Fix invisible button labels in Firefox

--- a/novask/static/css/style.css
+++ b/novask/static/css/style.css
@@ -103,3 +103,7 @@ ul#dropdown-engines li a.dropdown-item {
 .dl-td {
     text-align: center;
 }
+
+.input-group-btn button.btn {
+    color: black;
+}
